--- a/module_2/registration.html
+++ b/module_2/registration.html
@@ -25,26 +25,25 @@
         <div class="first_block">
             <div class="form-group first_class">
                 <label>First name*</label>
-                <input name="username" id="name" random_tag type="text" class="form-control first-class" placeholder="Input your first name" maxlength="32" required>
+                <input id="first_name" name="first_name_field" data-form-type="input_first_name" class="form-control first-name-required" type="text" placeholder="Input your first name" maxlength="32" required>
             </div>
             <div class="form-group second_class">
                 <label>Last name*</label>
-                <input type="text" class="form-control test" placeholder="Input your last name" maxlength="32" required>
+                <input id="last_name" name="last_name_field" data-form-type="input_last_name" class="form-control last-name-required" type="text" placeholder="Input your last name" maxlength="32" required>
             </div>
-
             <div class="form-group third_class">
                 <label>Email*</label>
-                <input id="email" type="text" class="form-control third" placeholder="Input your email" maxlength="32" required>
+                <input id="email" name="email_field" data-form-type="input_email" class="form-control email-required" type="text" placeholder="Input your email" maxlength="32" required>
             </div>
         </div>
         <div class="second_block">
             <div class="form-group first_class">
                 <label>Phone:</label>
-                <input type="text" class="form-control first" placeholder="Input your phone:" maxlength="32">
+                <input  id="phone" name="phone_field" data-form-type="input_phone" class="form-control phone-optional" type="text" placeholder="Input your phone:" maxlength="32">
             </div>
             <div class="form-group second_class">
                 <label>Address:</label>
-                <input type="text" class="form-control second" placeholder="Input your address:" maxlength="32">
+                <input id="address" name="address_field" data-form-type="input_address" class="form-control address-optional" type="text" placeholder="Input your address:" maxlength="32">
             </div>
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
